<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_menu_tone"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#77777777"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="3"
            android:text="@string/contrast"
            android:textColor="#aaffffff"
            android:textSize="16sp" />

        <SeekBar
            android:id="@+id/seekbar_contrast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="255"
            android:progress="127" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="3"
            android:text="@string/saturation"
            android:textColor="#aaffffff"
            android:textSize="16sp" />

        <SeekBar
            android:id="@+id/seekbar_saturation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="255"
            android:progress="127" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="3"
            android:text="@string/lightness"
            android:textColor="#aaffffff"
            android:textSize="16sp" />

        <SeekBar
            android:id="@+id/seekbar_lightness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="255"
            android:progress="127" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="3"
            android:text="@string/contr"
            android:textColor="#aaffffff"
            android:textSize="16sp" />

        <SeekBar
            android:id="@+id/seekbar_contr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="255"
            android:progress="127" />
    </LinearLayout>
</LinearLayout>

