<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <RelativeLayout
        android:id="@+id/rl_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <include
            layout="@layout/layout_save1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <include
            layout="@layout/layout_save2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />


    </RelativeLayout>


    <view
        android:id="@+id/crop_image"
        class="com.qian.imagegraffiti.view.CropImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/layout_buttom"
        android:layout_below="@+id/rl_top" />

    <!-- 底部区域布局 -->
    <LinearLayout
        android:id="@+id/layout_buttom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawableTop="@drawable/btn_edit"
            android:gravity="center"
            android:onClick="onClick"
            android:padding="10dp"
            android:text="@string/edit"
            android:textColor="#aaffffff"
            android:textSize="16sp" />

        <Button
            android:id="@+id/tone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawableTop="@drawable/btn_color"
            android:gravity="center"
            android:onClick="onClick"
            android:padding="10dp"
            android:text="@string/tone"
            android:textColor="#aaffffff"
            android:textSize="16sp" />

        <Button
            android:id="@+id/frame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawableTop="@drawable/btn_frame"
            android:gravity="center"
            android:onClick="onClick"
            android:padding="10dp"
            android:text="@string/frame"
            android:textColor="#aaffffff"
            android:textSize="16sp" />

        <Button
            android:id="@+id/myDoodle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawableTop="@drawable/content_edit"
            android:gravity="center"
            android:onClick="onClick"
            android:padding="10dp"
            android:text="@string/doodle"
            android:textColor="#aaffffff"
            android:textSize="16sp" />

        <Button
            android:id="@+id/mySpecial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawableTop="@drawable/rating_favorite"
            android:gravity="center"
            android:onClick="onClick"
            android:padding="10dp"
            android:text="@string/specific"
            android:textColor="#aaffffff"
            android:textSize="16sp" />

    </LinearLayout>

    <include
        layout="@layout/menu_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:visibility="gone" />

    <include
        layout="@layout/menu_edit_resize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:visibility="gone" />

    <include
        layout="@layout/menu_edit_reverse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:visibility="gone" />

    <include
        layout="@layout/menu_edit_rotate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:visibility="gone" />

</RelativeLayout>
